[package]
name = "PIjN_random_module"
version = "3.7.30"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.18"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
serde_json = "1.0"